fixed canva previsualizer missalignment

--- a/scss/gallery/_gallerybar.scss
+++ b/scss/gallery/_gallerybar.scss
@@ -51,7 +51,7 @@
         flex-direction: row;
         display: flex;
         align-items: center;
-        height: 10vh;
+        height: 65px;
         width: 80vw;
         overflow-x: scroll !important;
         overflow-y: hidden !important;
